--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/config": "^3.3.5",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^12.8.0",
     "argon2": "^0.41.1",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.12",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
