--- a/backend/package.json
+++ b/backend/package.json
@@ -22,13 +22,18 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^12.8.0",
+    "@types/got": "^9.6.12",
     "argon2": "^0.41.1",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0",
     "config": "^3.3.12",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "got": "^11.8.6",
     "jsonwebtoken": "^9.0.2",
+    "leetcode-query": "^1.2.3",
     "lodash": "^4.17.21",
     "mongo": "^0.1.0",
     "mongoose": "^8.7.1",
