--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "apexcharts": "^3.54.1",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.5",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
