--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,19 +15,23 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-calendar-heatmap": "^1.9.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
+    "react-tooltip": "^5.28.0",
     "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/react": "^18.3.10",
+    "@types/react-calendar-heatmap": "^1.9.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
