hosting and other stuff

--- a/backend/package.json
+++ b/backend/package.json
@@ -38,9 +38,8 @@
     "mongo": "^0.1.0",
     "mongoose": "^8.7.1",
     "nanoid": "^5.0.7",
-    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
-    "pino": "^9.4.0",
-    "zod": "^3.23.8"
+    "pino": "^9.4.0"
+    
   }
 }
