--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "node src/index.ts",
-    "build": "tsc"
+    "start": "node src/index.ts"
   },
   "author": "",
   "license": "ISC",
