--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "node src/index.ts"
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/config": "^3.3.5",
@@ -41,6 +38,5 @@
     "nanoid": "^5.0.7",
     "nodemon": "^3.1.7",
     "pino": "^9.4.0"
-    
   }
 }
