--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,7 +4,12 @@
       { "src": "src/index.ts", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "src/index.ts" }
+      { "src": "/(.*)", "dest": "src/index.ts"
+    , "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization"
+    } }
+
     ]
   }
-  
