--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/config": "^3.3.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.10",
@@ -26,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
     "config": "^3.3.12",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
