--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,12 +4,7 @@
       { "src": "src/index.ts", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "src/index.ts"
-    , "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-    } }
-
+      { "src": "/(.*)", "dest": "src/index.ts" }
+      
     ]
   }
